--- a/index.html
+++ b/index.html
@@ -8,13 +8,34 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
-    <nav class="nav">
-        <div>SABORES</div>
-        <div>IMG</div>
-        <div>TIENDA</div>
-    </nav>
+    
+    <header data-aos="fade-down" data-aos-once="true" class="head-nav">
+        <nav class="nav">
+            <a href="index.html">
+                <img src="img/marca/Identidad-Mestizo-01.svg" alt="">
+            </a>
+            <div id="nav-icon">
+                <svg id="menu" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-menu-2" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M4 6l16 0"></path>
+                    <path d="M4 12l16 0"></path>
+                    <path d="M4 18l16 0"></path>
+                </svg>
+                <svg id="x" xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-x" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+                    <path d="M18 6l-12 12"></path>
+                    <path d="M6 6l12 12"></path>
+                </svg>
+            </div>
+        </nav>
 
-    <main>
+        <nav id="hidden-nav" class="hidden-nav">
+            <p>SABORES</p>
+            <p>TIENDA</p>
+        </nav>
+    </header>
+
+    <main id="main">
 
         <section class="pag">
 
@@ -118,7 +139,7 @@
     </main>
 
 
-    <footer class="main-footer">
+    <footer data-aos="fade-up" data-aos-once="true" class="main-footer">
     
         <section class="footer-bottom">
             <div>
@@ -151,6 +172,7 @@
         </section> 
     </footer>
     <!-- Script -->
+    <script src="js/app.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
