--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <section class="pag">
 
-            <section class="info">
+            <section class="info" id="1">
                 <h1  data-aos="zoom-in-up">
                     HUMUS<br><span class="mainColor">CLÁSICO</span>
                 </h1>
