--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             <section class="info">
                 <h1  data-aos="zoom-in-up">
-                    HUMUS<br><span class="mainColor">CLÁSICO</span>
+                    HUMMUS<br><span class="mainColor">CLÁSICO</span>
                 </h1>
                 <h3 data-aos="zoom-in-up">
                     Clásico, sí. Pero fuera de lo común. Con una textura que te deja cantando onda: suave, suave, suave, bien suave (¿lo tenés al tema?) y un sabor que le queda bien a lo que se te ocurra. Y si no se te ocurre nada, lo bueno es que a cucharadas sigue siendo un hit.
@@ -90,7 +90,7 @@
 
             <section class="info">
                 <h2 data-aos="zoom-in-up">
-                    HUMUS<br><span class="redColor">PICANTE</span>
+                    HUMMUS<br><span class="redColor">PICANTE</span>
                 </h2>
                 <h3 data-aos="zoom-in-up">
                     Hablás de este hummus y se te pianta un lagrimón. Quizás sea por la emoción de encontrar algo que te encanta, o por el picante ¿quién sabe? Pero de lo que sí podemos estar seguros, es que este sabor es un fuego.
@@ -115,7 +115,7 @@
 
             <section class="info">
                 <h2 data-aos="zoom-in-up">
-                    HUMUS<br><span class="blueColor">AJO NEGRO</span>
+                    HUMMUS<br><span class="blueColor">AJO NEGRO</span>
                 </h2>
                 <h3 data-aos="zoom-in-up">
                     Un hummus definitivamente etzótico. Como la palabra exótico, que por cierto, le queda mucho mejor que raro. Porque darle un toque japo a una receta de medio oriente puede ser peculiar, pero raro, raro sería que no hagamos un gusto así: etzótico.
@@ -140,7 +140,7 @@
 
             <section class="info">
                 <h2 data-aos="zoom-in-up">
-                    HUMUS<br><span class="greenColor">PISTACHO</span>
+                    HUMMUS<br><span class="greenColor">PISTACHO</span>
                 </h2>
                 <h3 data-aos="zoom-in-up">
                     Estar verde habla de inmadurez. Y vaya que es de inmaduro tirar fruta con los sabores; o como en este caso, fruto seco. Porque puede fallar decía Tusam, pero esta vez salió el truco. Y ahí nomás gritaron quiero retruco; ¡quiero vale cuatro carajo! Y yo quiero, porque este sabor el ancho de espadas.
@@ -168,7 +168,7 @@
                     PASTA<br><span class="skyBlueColor">TAHINI</span>
                 </h2>
                 <h3 data-aos="zoom-in-up">
-                    Una Pasta bien Posta. 100% hecha con sésamo blanco tostado, para que tomes la posta, o sí te gusta de otro modo; agarres la pasta, y te pongas a hacer todo tipo de comidas. Porque la posta también, es que no es solo para el hummus.
+                    Una Pasta bien Posta. 100% hecha con sésamo blanco tostado, para que tomes la posta, o sí te gusta de otro modo: agarres la pasta, y te pongas a hacer todo tipo de comidas. Porque la posta también, es que no es solo para el hummus.
                 </h3>
                 <a href="pages/tahini.html" data-aos="zoom-in-up">
                     <button class="ver-mas-btn-skyBlue">
@@ -186,6 +186,11 @@
 
         </section>
     </main>
+
+    <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-chevron-compact-up flecha mainColor" width="50" height="50" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+        <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+        <path d="M4 13l8 -3l8 3"></path>
+    </svg>
 
     <footer data-aos="fade-up" data-aos-once="true" class="main-footer">
         
